@startuml

package "Entities" {
    class Employee <<Entity>> {
        - id : Long
        - name : String
        - role : String
    }
}

package "Repositories" {
    interface EmployeeRepository <<Repository>> {
    }
}

package "Controllers" {
    class EmployeeController <<Controller>> {
        - repository : EmployeeRepository
    }

    class EmployeeNotFoundException <<Exception>> {
    }

    class EmployeeNotFoundAdvice <<Advice>> {
    }
}

package "Repositories" {
    class LoadDatabase <<Configuration>> {
    }
}

EmployeeController --> EmployeeRepository
EmployeeController --> EmployeeNotFoundException
EmployeeNotFoundAdvice --> EmployeeNotFoundException
LoadDatabase --> EmployeeRepository
EmployeeRepository --> Employee

@enduml
